--- a/the magic calculator/styles.css
+++ b/the magic calculator/styles.css
@@ -4,7 +4,7 @@ body {
 }
 
 .container {
-    background-color: #0e0e4c;
+    background-color: #151598;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -22,7 +22,7 @@ body {
 }
 
 #input-box {
-    background-color: #03032a;
+    background-color: #0f0f60;
     color: #fff;
     padding: 0.5em;
     margin: 0.5em;
@@ -46,7 +46,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #0e0e4c;
+    background-color: #0c0c6e;
     color: #fff;
     font-weight: bold;
     font-size: larger;
@@ -58,11 +58,11 @@ body {
 }
 
 .key:hover {
-    background-color: #171763;
+    background-color: #1e1e8e;
 }
 
 .key:active {
-    background-color: #03032a;
+    background-color: #0a0a7a;
     height: 0.2em;
     margin-top: auto;
 }
@@ -72,25 +72,25 @@ body {
 }
 
 .symbol {
-    background-color: #eb8500f3;
+    background-color: #ee2405f3;
 }
 
 .symbol:hover {
-    background-color: #ed931ef3;
+    background-color: #f0442af3;
 }
 
 .symbol:active {
-    background-color: #da6c06f3;
+    background-color: #ee2405f3;
 }
 
 .c-key {
-    background-color: #0a0aa3;
+    background-color: #f3b409;
 }
 
 .c-key:hover {
-    background-color: #0f0fc4;
+    background-color: #f4be29;
 }
 
 .c-key:active {
-    background-color: #0a0a85;
+    background-color: #f3b409;
 }
