--- a/the magic calculator/styles.css
+++ b/the magic calculator/styles.css
@@ -4,7 +4,7 @@ body {
 }
 
 .container {
-    background-color: #151598;
+    background-color: #163172;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -13,7 +13,7 @@ body {
 }
 
 .calculator {
-    background-color: #fff;
+    background-color: #F6F6F6;
     max-width: 16em;
     width: 100%;
     height: 21em;
@@ -22,8 +22,8 @@ body {
 }
 
 #input-box {
-    background-color: #0f0f60;
-    color: #fff;
+    background-color: #4CAF50;
+    color: #1A1A1A;
     padding: 0.5em;
     margin: 0.5em;
     margin-bottom: 1.5em;
@@ -46,7 +46,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #0c0c6e;
+    background-color: #163172;
     color: #fff;
     font-weight: bold;
     font-size: larger;
@@ -57,40 +57,21 @@ body {
     margin: 0.1em;
 }
 
-.key:hover {
-    background-color: #1e1e8e;
-}
-
-.key:active {
-    background-color: #0a0a7a;
-    height: 0.2em;
-    margin-top: auto;
-}
-
 .key::selection {
     background-color: transparent;
 }
 
 .symbol {
-    background-color: #ee2405f3;
-}
-
-.symbol:hover {
-    background-color: #f0442af3;
-}
-
-.symbol:active {
-    background-color: #ee2405f3;
+    background-color: #1E56A0;
+    color: #F6F6F6;
 }
 
 .c-key {
-    background-color: #f3b409;
+    background-color: #B22234;
+    color: #F6F6F6;
 }
 
-.c-key:hover {
-    background-color: #f4be29;
-}
-
-.c-key:active {
-    background-color: #f3b409;
+.equal-key {
+    background-color: #FFD700;
+    color: #163172;
 }
